// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductItem Component matches the snapshot 1`] = `
<div>
  <li
    class="product-item css-gon1ka"
  >
    <div
      class="product-item-content css-55cmdl"
    >
      <div
        class="image-container css-0"
      >
        <img
          alt="Sample Product"
          class="chakra-image css-1goliy0"
          loading="lazy"
          src="sample-image.jpg"
        />
      </div>
      <p
        class="chakra-text css-c8mxau"
      >
        Sample Product
      </p>
      <a
        class="chakra-link css-204pox"
        href="/products/P01"
      >
        detail
      </a>
    </div>
  </li>
</div>
`;

exports[`ProductItem Component renders imageNotAvailable when product image is not available 1`] = `
<div>
  <li
    class="product-item css-gon1ka"
  >
    <div
      class="product-item-content css-55cmdl"
    >
      <div
        class="image-container css-0"
      >
        <img
          alt="Sample Product"
          class="chakra-image css-1goliy0"
          loading="lazy"
          src="[object Object]"
        />
      </div>
      <p
        class="chakra-text css-c8mxau"
      >
        Sample Product
      </p>
      <a
        class="chakra-link css-204pox"
        href="/products/P01"
      >
        detail
      </a>
    </div>
  </li>
  ,
</div>
`;
